Added page with examples. Added login form example.

--- a/playground/index.html
+++ b/playground/index.html
@@ -21,12 +21,25 @@
         <!-- Content -->
         <div class="atk-layout">
 			<div class="atk-layout-row atk-swatch-ink">
-				<div class="atk-wrapper"><header id="atk-header" class="atk-size-giga atk-padding-small atk-align-center">AgileToolkit <span class="atk-label atk-swatch-yellow">CSS</span></header></div>
+				<div class="atk-wrapper">
+					<div class="atk-bar atk-cells atk-cells-gutter">
+						<div class="atk-cell">
+							<a href="/" class="atk-size-mega"><strong>AgileToolkit</strong>&nbsp;<span class="atk-label atk-swatch-yellow">CSS</span></a>
+						</div>
+						<div class="atk-cell atk-align-right">
+							<ul class="atk-menu-horizontal">
+								<li><a href="/" class="atk-swatch-ink atk-padding"><strong>Playground</strong></a></li>
+								<li><a href="layouts.html" class="atk-swatch-ink atk-padding">Layouts</a></li>
+								<li><a href="examples.html" class="atk-swatch-ink atk-padding">Examples</a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
 			</div>
 			<div id="atk-main" class="atk-layout-row fluid">
 				<div id="atk-main-inner" class="atk-layout">
 					<div id="atk-content" class="atk-layout-column fluid">
-						<div class="atk-wrapper atk-padding-large">
+						<div class="atk-wrapper atk-section-large">
 							<section id="grid-system">
 								<h2>Grid System</h2>
 								<p>Our grid system is based on <a href="http://www.gridpak.com">Gridpak</a> tool which allows you to add as many columns as needed. It also supports responsiveness.</p>
@@ -2352,6 +2365,10 @@
 										</form>
 									</div>
 								</div>
+								<h3>Tooltips</h3>
+								<div class="atk-box" id="example-jqueryui-tooltips">
+									Lorem ipsum dolor sit amet, consectetur adipisicing elit. <a href="#" title="Tooltip Example">Nobis</a>, corrupti, dignissimos voluptatem modi omnis beatae deleniti ipsa <a href="#" title="Tooltip Example">animi similique</a> dolorem quos est adipisci officiis quam distinctio deserunt reprehenderit aliquid a.
+								</div>
 							</section>
 						</div>
 					</div>
@@ -2380,6 +2397,7 @@
         <script src="js/accordion.js"></script>
         <script src="js/dialog.js"></script>
         <script src="js/button.js"></script>
+        <script src="js/tooltip.js"></script>
         <script src="js/atk-helpers-min.js"></script>
         <script src="js/demo.js"></script>
 
