--- a/playground/layouts.html
+++ b/playground/layouts.html
@@ -20,13 +20,22 @@
         
         <!-- Content -->
         <div class="atk-layout">
-			<div class="atk-layout-row">
-                <div class="atk-layout-cell atk-swatch-ink">
-                    <div class="atk-wrapper atk-section-small atk-align-center atk-size-giga">
-                        AgileToolkit <span class="atk-label atk-swatch-yellow">CSS</span>
+            <div class="atk-layout-row atk-swatch-ink">
+                <div class="atk-wrapper">
+                    <div class="atk-bar atk-cells atk-cells-gutter">
+                        <div class="atk-cell">
+                            <a href="/" class="atk-size-mega"><strong>AgileToolkit</strong>&nbsp;<span class="atk-label atk-swatch-yellow">CSS</span></a>
+                        </div>
+                        <div class="atk-cell atk-align-right">
+                            <ul class="atk-menu-horizontal">
+                                <li><a href="/" class="atk-swatch-ink atk-padding">Playground</a></li>
+                                <li><a href="layouts.html" class="atk-swatch-ink atk-padding"><strong>Layouts</strong></a></li>
+                                <li><a href="examples.html" class="atk-swatch-ink atk-padding">Examples</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
-			</div>
+            </div>
 			<div class="atk-layout-row atk-layout-fluid">
 				<div class="atk-layout atk-layout-cell">
 					<div class="atk-layout-column atk-layout-fluid">
@@ -41,17 +50,17 @@
                             <div class="row atk-push">
                                 <div class="span_4 col">
                                     <div class="atk-box-small layout-template">
-                                        <a href="layout-fixed.html" class="atk-box-small atk-swatch-gray atk-push-small">
+                                        <a href="layouts/fixed.html" class="atk-box-small atk-swatch-gray atk-push-small">
                                             <span class="atk-box-small atk-move-center atk-push-small atk-swatch-ink" style="width:150px"></span>
                                             <span class="atk-box atk-move-center atk-push-small" style="width:150px"></span>
                                             <span class="atk-box-small atk-move-center atk-push-small" style="width:150px"></span>
                                         </a>
-                                        <div class="atk-align-center atk-size-kilo"><a href="layout-fixed.html">Fixed</a></div>
+                                        <div class="atk-align-center atk-size-kilo"><a href="layouts/fixed.html">Fixed</a></div>
                                     </div>
                                 </div>
                                 <div class="span_4 col">
                                     <div class="atk-box-small layout-template">
-                                        <a href="layout-fixed-multicol.html" class="atk-box-small atk-swatch-gray atk-push-small">
+                                        <a href="layouts/fixed-multicol.html" class="atk-box-small atk-swatch-gray atk-push-small">
                                             <span class="atk-box-small atk-move-center atk-push-small atk-swatch-ink" style="width:150px"></span>
                                             <span class="atk-move-center atk-cells atk-cells-gutter-small atk-push-small" style="width:150px">
                                                 <span class="atk-cell atk-jackscrew"><span class="atk-box atk-move-center atk-push-small"></span></span>
@@ -59,24 +68,24 @@
                                             </span>
                                             <span class="atk-box-small atk-move-center atk-push-small" style="width:150px"></span>
                                         </a>
-                                        <div class="atk-align-center atk-size-kilo"><a href="layout-fixed-multicol.html">Fixed Multi-Column</a></div>
+                                        <div class="atk-align-center atk-size-kilo"><a href="layouts/fixed-multicol.html">Fixed Multi-Column</a></div>
                                     </div>
                                 </div>
                                 <div class="span_4 col">
                                     <div class="atk-box-small layout-template">
-                                        <a href="layout-hybrid.html" class="atk-box-small atk-swatch-gray atk-push-small">
+                                        <a href="layouts/hybrid.html" class="atk-box-small atk-swatch-gray atk-push-small">
                                             <span class="atk-box-small atk-move-center atk-push-small atk-swatch-ink" style="min-width:150px;max-width:250px;width:auto;"></span>
                                             <span class="atk-box atk-move-center atk-push-small" style="min-width:150px;max-width:250px;"></span>
                                             <span class="atk-box-small atk-move-center atk-push-small" style="min-width:150px;max-width:250px;"></span>
                                         </a>
-                                        <div class="atk-align-center atk-size-kilo"><a href="layout-hybrid.html">Hybrid</a></div>
+                                        <div class="atk-align-center atk-size-kilo"><a href="layouts/hybrid.html">Hybrid</a></div>
                                     </div>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="span_4 col">
                                     <div class="atk-box-small layout-template">
-                                        <a href="layout-fluid.html" class="atk-box-small atk-swatch-gray atk-push-small">
+                                        <a href="layouts/fluid.html" class="atk-box-small atk-swatch-gray atk-push-small">
                                             <span class="atk-box-small atk-move-center atk-push-small atk-swatch-ink"></span>
                                             <span class="atk-cells atk-cells-gutter-small atk-push-small">
                                                 <span class="atk-cell"><span class="atk-box atk-move-center atk-push-small"></span></span>
@@ -85,19 +94,19 @@
                                             </span>
                                             <span class="atk-box-small atk-move-center atk-push-small"></span>
                                         </a>
-                                        <div class="atk-align-center atk-size-kilo"><a href="layout-fluid.html">Fluid</a></div>
+                                        <div class="atk-align-center atk-size-kilo"><a href="layouts/fluid.html">Fluid</a></div>
                                     </div>
                                 </div>
                                 <div class="span_4 col">
                                     <div class="atk-box-small layout-template">
-                                        <a href="layout-centered.html" class="atk-box-small atk-swatch-gray atk-push-small">
+                                        <a href="layouts/centered.html" class="atk-box-small atk-swatch-gray atk-push-small">
                                             <span class="atk-cells atk-push-small">
                                                 <span class="atk-cell atk-align-center atk-valign-middle atk-text-reset" style="height:139px">
                                                     <span class="atk-box atk-inline"></span>
                                                 </span>
                                             </span>
                                         </a>
-                                        <div class="atk-align-center atk-size-kilo"><a href="layout-centered.html">Centered</a></div>
+                                        <div class="atk-align-center atk-size-kilo"><a href="layouts/centered.html">Centered</a></div>
                                     </div>
                                 </div>
                             </div>
@@ -105,28 +114,22 @@
 					</div>
 				</div>
 			</div>
-            <div class="atk-layout-row">
-                <div class="atk-layout-cell">
-                    <div class="atk-wrapper atk-padding-small atk-text-dimmed atk-align-center do-theme-switch">
-                        <strong>Theme switch:</strong><span class="atk-sep"></span><a href="#" data-file="style-fixed.css">Fixed</a><span class="atk-sep">&sdot;</span><a href="#" data-file="style.css">Hybrid</a><span class="atk-sep">&sdot;</span><a href="#" data-file="style-compact.css">Compact</a>
-                    </div>
-                </div>
-            </div>
 		</div>
 		<!-- /Content -->
 
         <!-- Scripts -->
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-        <script src="http://view.jqueryui.com/master/ui/jquery.ui.core.js"></script>
-        <script src="http://view.jqueryui.com/master/ui/jquery.ui.widget.js"></script>
-        <script src="http://view.jqueryui.com/master/ui/jquery.ui.position.js"></script>
-        <script src="http://view.jqueryui.com/master/ui/jquery.ui.menu.js"></script>
-        <script src="http://view.jqueryui.com/master/ui/jquery.ui.tabs.js"></script>
-        <script src="http://view.jqueryui.com/master/ui/jquery.ui.datepicker.js"></script>
-        <script src="http://view.jqueryui.com/master/ui/jquery.ui.selectmenu.js"></script>
-        <script src="http://view.jqueryui.com/master/ui/jquery.ui.accordion.js"></script>
-        <script src="http://view.jqueryui.com/master/ui/jquery.ui.dialog.js"></script>
-        <script src="http://view.jqueryui.com/master/ui/jquery.ui.button.js"></script>
+        <script src="js/jquery.min.js"></script>
+        <script src="js/core.js"></script>
+        <script src="js/widget.js"></script>
+        <script src="js/position.js"></script>
+        <script src="js/menu.js"></script>
+        <script src="js/tabs.js"></script>
+        <script src="js/datepicker.js"></script>
+        <script src="js/selectmenu.js"></script>
+        <script src="js/accordion.js"></script>
+        <script src="js/dialog.js"></script>
+        <script src="js/button.js"></script>
+        <script src="js/tooltip.js"></script>
         <script src="js/atk-helpers-min.js"></script>
         <script src="js/demo.js"></script>
 
