Updated design of the login form.

--- a/playground/examples/form-login.html
+++ b/playground/examples/form-login.html
@@ -26,7 +26,7 @@
                         <div class="atk-wrapper">
                             <div class="span_6 atk-move-center">
                                 <div class="atk-box">
-                                    <div class="atk-push atk-align-center"><a href="javascript:void(0)" class="atk-text-reset"><img src="../images/logo.svg" title="Agile Toolkit" width="96" /></a></div>
+                                    <div class="atk-push atk-align-center"><a href="javascript:void(0)" class="atk-text-reset"><img src="../images/logo-gray.svg" title="Agile Toolkit" width="96" /></a></div>
                                     <div class="atk-form atk-form-stacked atk-form-compact">
                                         <form>
                                             <div class="atk-form-fieldset atk-push-small">
@@ -49,6 +49,10 @@
                                             </div>
                                         </form>
                                     </div>
+                                    <hr/>
+                                    <div class="atk-push-small">
+                                    <a href="#" class="atk-button atk-jackscrew atk-align-center atk-swatch-facebook"><span class="icon-facebook"></span> Sign in with Facebook</a></div>
+                                    <a href="#" class="atk-button atk-jackscrew atk-align-center atk-swatch-twitter"><span class="icon-twitter"></span> Sign in with Twitter</a>
                                 </div>
                                 <div class="atk-align-center">
                                     <a href="#" class="atk-text-dimmed">Don't have an acccount?</a>
