--- a/playground/layouts.html
+++ b/playground/layouts.html
@@ -1,144 +1,11 @@
-<!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>AgileToolkit CSS</title>
-        <meta name="description" content="">
-
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-
-		<link href="css/style.css" rel="stylesheet" type="text/css" />
-    </head>
-    <body>
-        <!--[if lt IE 7]>
-            <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
-        <![endif]-->
-        
-        <!-- Content -->
-        <div class="atk-layout">
-            <div class="atk-layout-row atk-swatch-ink">
-                <div class="atk-wrapper">
-                    <div class="atk-bar atk-cells atk-cells-gutter">
-                        <div class="atk-cell">
-                            <a href="/" class="atk-size-mega"><strong>AgileToolkit</strong>&nbsp;<span class="atk-label atk-swatch-yellow">CSS</span></a>
-                        </div>
-                        <div class="atk-cell atk-align-right">
-                            <ul class="atk-menu-horizontal">
-                                <li><a href="/" class="atk-swatch-ink atk-padding">Playground</a></li>
-                                <li><a href="layouts.html" class="atk-swatch-ink atk-padding"><strong>Layouts</strong></a></li>
-                                <li><a href="examples.html" class="atk-swatch-ink atk-padding">Examples</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-			<div class="atk-layout-row atk-layout-fluid">
-				<div class="atk-layout atk-layout-cell">
-					<div class="atk-layout-column atk-layout-fluid">
-						<div class="atk-wrapper atk-section-large">
-                            <h2>Layout Templates</h2>
-                            <p>It is highly recommended to use one of these layout templates as your project's basis. All templates were tested in various browsers such as <em>Safari (Win/Mac/iOS)</em>, <em>Google Chrome (Win/Mac)</em>, <em>Mozilla Firefox (Win/Mac)</em> and even <em>Internet Explorer 9+</em>.</p>
-                            <hr>
-                            <div class="atk-align-center atk-text-dimmed">
-                                <span class="icon-resize-horizontal"></span> Resize your browser's window to see template's behavior.
-                            </div>
-                            <hr>
-                            <div class="row atk-push">
-                                <div class="span_4 col">
-                                    <div class="atk-box-small layout-template">
-                                        <a href="layouts/fixed.html" class="atk-box-small atk-swatch-gray atk-push-small">
-                                            <span class="atk-box-small atk-move-center atk-push-small atk-swatch-ink" style="width:150px"></span>
-                                            <span class="atk-box atk-move-center atk-push-small" style="width:150px"></span>
-                                            <span class="atk-box-small atk-move-center atk-push-small" style="width:150px"></span>
-                                        </a>
-                                        <div class="atk-align-center atk-size-kilo"><a href="layouts/fixed.html">Fixed</a></div>
-                                    </div>
-                                </div>
-                                <div class="span_4 col">
-                                    <div class="atk-box-small layout-template">
-                                        <a href="layouts/fixed-multicol.html" class="atk-box-small atk-swatch-gray atk-push-small">
-                                            <span class="atk-box-small atk-move-center atk-push-small atk-swatch-ink" style="width:150px"></span>
-                                            <span class="atk-move-center atk-cells atk-cells-gutter-small atk-push-small" style="width:150px">
-                                                <span class="atk-cell atk-jackscrew"><span class="atk-box atk-move-center atk-push-small"></span></span>
-                                                <span class="atk-cell"><span class="atk-box atk-move-center atk-push-small"></span></span>
-                                            </span>
-                                            <span class="atk-box-small atk-move-center atk-push-small" style="width:150px"></span>
-                                        </a>
-                                        <div class="atk-align-center atk-size-kilo"><a href="layouts/fixed-multicol.html">Fixed Multi-Column</a></div>
-                                    </div>
-                                </div>
-                                <div class="span_4 col">
-                                    <div class="atk-box-small layout-template">
-                                        <a href="layouts/hybrid.html" class="atk-box-small atk-swatch-gray atk-push-small">
-                                            <span class="atk-box-small atk-move-center atk-push-small atk-swatch-ink" style="min-width:150px;max-width:250px;width:auto;"></span>
-                                            <span class="atk-box atk-move-center atk-push-small" style="min-width:150px;max-width:250px;"></span>
-                                            <span class="atk-box-small atk-move-center atk-push-small" style="min-width:150px;max-width:250px;"></span>
-                                        </a>
-                                        <div class="atk-align-center atk-size-kilo"><a href="layouts/hybrid.html">Hybrid</a></div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="span_4 col">
-                                    <div class="atk-box-small layout-template">
-                                        <a href="layouts/fluid.html" class="atk-box-small atk-swatch-gray atk-push-small">
-                                            <span class="atk-box-small atk-move-center atk-push-small atk-swatch-ink"></span>
-                                            <span class="atk-cells atk-cells-gutter-small atk-push-small">
-                                                <span class="atk-cell"><span class="atk-box atk-move-center atk-push-small"></span></span>
-                                                <span class="atk-cell atk-jackscrew"><span class="atk-box atk-move-center atk-push-small"></span></span>
-                                                <span class="atk-cell"><span class="atk-box atk-move-center atk-push-small"></span></span>
-                                            </span>
-                                            <span class="atk-box-small atk-move-center atk-push-small"></span>
-                                        </a>
-                                        <div class="atk-align-center atk-size-kilo"><a href="layouts/fluid.html">Fluid</a></div>
-                                    </div>
-                                </div>
-                                <div class="span_4 col">
-                                    <div class="atk-box-small layout-template">
-                                        <a href="layouts/centered.html" class="atk-box-small atk-swatch-gray atk-push-small">
-                                            <span class="atk-cells atk-push-small">
-                                                <span class="atk-cell atk-align-center atk-valign-middle atk-text-reset" style="height:139px">
-                                                    <span class="atk-box atk-inline"></span>
-                                                </span>
-                                            </span>
-                                        </a>
-                                        <div class="atk-align-center atk-size-kilo"><a href="layouts/centered.html">Centered</a></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- /Content -->
-
-        <!-- Scripts -->
-        <script src="js/jquery.min.js"></script>
-        <script src="js/core.js"></script>
-        <script src="js/widget.js"></script>
-        <script src="js/position.js"></script>
-        <script src="js/menu.js"></script>
-        <script src="js/tabs.js"></script>
-        <script src="js/datepicker.js"></script>
-        <script src="js/selectmenu.js"></script>
-        <script src="js/accordion.js"></script>
-        <script src="js/dialog.js"></script>
-        <script src="js/button.js"></script>
-        <script src="js/tooltip.js"></script>
-        <script src="js/atk-helpers-min.js"></script>
-        <script src="js/demo.js"></script>
-
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
-            (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-            g.src='//www.google-analytics.com/ga.js';
-            s.parentNode.insertBefore(g,s)}(document,'script'));
-        </script>
-    </body>
-</html>
+<!DOCTYPE html><!--[if lt IE 7]<html lang="en" class="no-js oldie lt-ie9 lt-ie8 lt-ie7"><![endif]-->
+<!--[if IE 7]><html lang="en" class="no-js oldie lt-ie9 lt-ie8"><![endif]-->
+<!--[if IE 8]><html lang="en" class="no-js oldie lt-ie9"><![endif]-->
+<!--[if gt IE 8]><!--><html class="no-js"><!--<![endif]--><head><meta charset="utf-8"><!--[if IE]><!--><meta http-equiv="X-UA-Compatible" content="IE=edge"><!--[endif]--><title>Agile Toolkit CSS</title><meta name="description" content=""><link rel="stylesheet" href="css/style.css"></head><body><!--[if lt IE 8]><p class="browsehappy">You are using an <strong>outdated</strong> browser.
+Please <a href="http://browsehappy.com/">upgrade your browser</a>
+to improve your experience.</p><![endif]--><div class="atk-layout"><div class="atk-layout-row atk-swatch-ink"><div class="atk-wrapper"><div class="atk-bar atk-cells atk-cells-gutter"><div class="atk-cell"><a href="/" class="atk-size-mega"><strong>AgileToolkit</strong>&nbsp;<span class="atk-label atk-swatch-yellow">CSS</span></a></div><div class="atk-cell atk-jackscrew"><ul class="atk-menu-horizontal"><li><a href="/" class="atk-swatch-ink atk-padding">Playground</a></li><li><a href="layouts.html" class="atk-swatch-ink atk-padding">Layouts</a></li><li><a href="examples.html" class="atk-swatch-ink atk-padding">Examples</a></li></ul></div><div class="atk-cell atk-align-right"><ul class="atk-menu-horizontal"><li><a href="https://github.com/atk4/agiletoolkit-css" class="atk-swatch-ink atk-padding"><span class="icon-github"></span>&nbsp;GitHub</a></li><li><a href="https://twitter.com/atk4" class="atk-swatch-ink atk-padding"><span class="icon-twitter"></span>&nbsp;Twitter</a></li></ul></div></div></div></div><div class="atk-layout-row atk-layout-fluid"><div class="atk-layout atk-layout-cell"><div class="atk-layout-column atk-layout-fluid"><div class="atk-wrapper atk-section-large"><h2>Layout Templates</h2><p>It is highly recommended to use one of these layout templates as your project's basis. All templates were tested in various browsers such as&nbsp;<em>Safari (Win/Mac/iOS)</em>,&nbsp;<em>Google Chrome (Win/Mac)</em>,&nbsp;<em>Mozilla Firefox (Win/Mac)</em>&nbsp;and even&nbsp;<em>Internet Explorer 9+</em>.</p><hr><div class="atk-align-center atk-text-dimmed"><span class="icon-resize-horizontal"></span>&nbsp;Resize your browser's window to see template's behavior.</div><hr><div class="row atk-push"><div class="span_4 col"><div class="atk-box-small layout-template"><a href="layouts/fixed.html" class="atk-box-small atk-swatch-gray atk-push-small"><span style="width: 150px;" class="atk-box-small atk-move-center atk-push-small atk-swatch-ink"></span><span style="width: 150px;" class="atk-box atk-move-center atk-push-small"></span><span style="width: 150px;" class="atk-box-small atk-move-center atk-push-small"></span></a><div class="atk-align-center atk-size-kilo"><a href="layouts/fixed.html">Fixed</a></div></div></div><div class="span_4 col"><div class="atk-box-small layout-template"><a href="layouts/fixed-multicol.html" class="atk-box-small atk-swatch-gray atk-push-small"><span style="width: 150px;" class="atk-box-small atk-move-center atk-push-small atk-swatch-ink"></span><span style="width: 150px;" class="atk-move-center atk-cells atk-cells-gutter-small atk-push-small"><span class="atk-cell atk-jackscrew"><span class="atk-box atk-move-center atk-push-small"></span></span><span class="atk-cell"><span class="atk-box atk-move-center atk-push-small"></span></span></span><span style="width: 150px;" class="atk-box-small atk-move-center atk-push-small"></span></a><div class="atk-align-center atk-size-kilo"><a href="layouts/fixed-multicol.html">Fixed Multi-Column</a></div></div></div><div class="span_4 col"><div class="atk-box-small layout-template"><a href="layouts/hybrid.html" class="atk-box-small atk-swatch-gray atk-push-small"><span style="min-width: 150px; max-width: 250px; width: auto;" class="atk-box-small atk-move-center atk-push-small atk-swatch-ink"></span><span style="min-width: 150px; max-width: 250px;" class="atk-box atk-move-center atk-push-small"></span><span style="min-width: 150px; max-width: 250px;" class="atk-box-small atk-move-center atk-push-small"></span></a><div class="atk-align-center atk-size-kilo"><a href="layouts/hybrid.html">Hybrid</a></div></div></div></div><div class="row"><div class="span_4 col"><div class="atk-box-small layout-template"><a href="layouts/fluid.html" class="atk-box-small atk-swatch-gray atk-push-small"><span class="atk-box-small atk-move-center atk-push-small atk-swatch-ink"></span><span class="atk-cells atk-cells-gutter-small atk-push-small"><span class="atk-cell"><span class="atk-box atk-move-center atk-push-small"></span></span><span class="atk-cell atk-jackscrew"><span class="atk-box atk-move-center atk-push-small"></span></span><span class="atk-cell"><span class="atk-box atk-move-center atk-push-small"></span></span></span><span class="atk-box-small atk-move-center atk-push-small"></span></a><div class="atk-align-center atk-size-kilo"><a href="layouts/fluid.html">Fluid</a></div></div></div><div class="span_4 col"><div class="atk-box-small layout-template"><a href="layouts/centered.html" class="atk-box-small atk-swatch-gray atk-push-small"><span class="atk-cells atk-push-small"><span style="height: 139px;" class="atk-cell atk-align-center atk-valign-middle atk-text-reset"><span class="atk-box atk-inline"></span></span></span></a><div class="atk-align-center atk-size-kilo"><a href="layouts/centered.html">Centered</a></div></div></div></div></div></div></div></div></div><script src="js/jquery.min.js"></script><script src="js/core.js"></script><script src="js/widget.js"></script><script src="js/position.js"></script><script src="js/menu.js"></script><script src="js/tabs.js"></script><script src="js/datepicker.js"></script><script src="js/selectmenu.js"></script><script src="js/accordion.js"></script><script src="js/dialog.js"></script><script src="js/button.js"></script><script src="js/tooltip.js"></script><script src="js/atk-helpers-min.js"></script><script src="js/demo.js"></script><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+ga('create', 'UA-17702108-4');
+ga('send', 'pageview');</script></body></html>
