Converted all templates to Jade.

--- a/playground/examples/form-login.html
+++ b/playground/examples/form-login.html
@@ -1,92 +1,11 @@
-<!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>AgileToolkit CSS</title>
-        <meta name="description" content="">
-
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-
-		<link href="../css/style-example.css" rel="stylesheet" type="text/css" />
-    </head>
-    <body>
-        <!--[if lt IE 7]>
-            <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
-        <![endif]-->
-        
-        <!-- Content -->
-        <div class="atk-layout">
-			<div class="atk-layout-row atk-layout-fluid">
-				<div class="atk-layout atk-layout-cell">
-					<div class="atk-layout-column atk-layout-fluid atk-valign-middle">
-                        <div class="atk-wrapper">
-                            <div class="span_6 atk-move-center">
-                                <div class="atk-box">
-                                    <div class="atk-push atk-align-center"><a href="javascript:void(0)" class="atk-text-reset"><img src="../images/logo-gray.svg" title="Agile Toolkit" width="96" /></a></div>
-                                    <div class="atk-form atk-form-stacked atk-form-compact">
-                                        <form>
-                                            <div class="atk-form-fieldset atk-push-small">
-                                                <div class="atk-cells">
-                                                    <div class="atk-cell"></div>
-                                                    <div class="atk-cell"><input type="text" placeholder="E-mail"/></div>
-                                                </div>
-                                                <div class="atk-cells">
-                                                    <div class="atk-cell"></div>
-                                                    <div class="atk-cell"><span class="atk-input-icon"><input type="password" placeholder="Password" /><a href="javascript:void(0)" class="icon-help-circled-1"></a></span></div>
-                                                </div>
-                                            </div>
-                                            <div class="atk-cells atk-cells-gutter">
-                                                <div class="atk-cell">
-                                                    <div class="atk-input-radio">
-                                                        <span class="atk-text-dimmed"><input type="checkbox" id="remember"><label for="remember">Remember me</label></span>
-                                                    </div>
-                                                </div>
-                                                <div class="atk-cell atk-align-right"><button class="atk-button atk-jackscrew atk-swatch-green">Sign In</button></div>
-                                            </div>
-                                        </form>
-                                    </div>
-                                    <hr/>
-                                    <div class="atk-push-small">
-                                    <a href="#" class="atk-button atk-jackscrew atk-align-center atk-swatch-facebook"><span class="icon-facebook"></span> Sign in with Facebook</a></div>
-                                    <a href="#" class="atk-button atk-jackscrew atk-align-center atk-swatch-twitter"><span class="icon-twitter"></span> Sign in with Twitter</a>
-                                </div>
-                                <div class="atk-align-center">
-                                    <a href="#" class="atk-text-dimmed">Don't have an acccount?</a>
-                                </div>
-                            </div>
-                        </div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- /Content -->
-
-        <!-- Scripts -->
-        <script src="../js/jquery.min.js"></script>
-        <script src="../js/core.js"></script>
-        <script src="../js/widget.js"></script>
-        <script src="../js/position.js"></script>
-        <script src="../js/menu.js"></script>
-        <script src="../js/tabs.js"></script>
-        <script src="../js/datepicker.js"></script>
-        <script src="../js/selectmenu.js"></script>
-        <script src="../js/accordion.js"></script>
-        <script src="../js/dialog.js"></script>
-        <script src="../js/button.js"></script>
-        <script src="../js/tooltip.js"></script>
-        <script src="../js/atk-helpers-min.js"></script>
-        <script src="../js/demo.js"></script>
-
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
-            (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-            g.src='//www.google-analytics.com/ga.js';
-            s.parentNode.insertBefore(g,s)}(document,'script'));
-        </script>
-    </body>
-</html>
+<!DOCTYPE html><!--[if lt IE 7]<html lang="en" class="no-js oldie lt-ie9 lt-ie8 lt-ie7"><![endif]-->
+<!--[if IE 7]><html lang="en" class="no-js oldie lt-ie9 lt-ie8"><![endif]-->
+<!--[if IE 8]><html lang="en" class="no-js oldie lt-ie9"><![endif]-->
+<!--[if gt IE 8]><!--><html class="no-js"><!--<![endif]--><head><meta charset="utf-8"><!--[if IE]><!--><meta http-equiv="X-UA-Compatible" content="IE=edge"><!--[endif]--><title>Agile Toolkit CSS</title><meta name="description" content=""><link rel="stylesheet" href="../css/style-example.css"></head><body><!--[if lt IE 8]><p class="browsehappy">You are using an <strong>outdated</strong> browser.
+Please <a href="http://browsehappy.com/">upgrade your browser</a>
+to improve your experience.</p><![endif]--><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+ga('create', 'UA-17702108-4');
+ga('send', 'pageview');</script><div class="atk-layout"><div class="atk-layout-row atk-layout-fluid"><div class="atk-layout atk-layout-cell"><div class="atk-layout-column atk-layout-fluid atk-valign-middle"><div class="atk-wrapper"><div class="span_6 atk-move-center"><div class="atk-box"><div class="atk-push atk-align-center"><a href="javascript:void(0)" class="atk-text-reset"><img src="../images/logo-gray.svg" title="Agile Toolkit" width="96"></a></div><div class="atk-form atk-form-stacked atk-form-compact"><form><div class="atk-form-fieldset atk-push-small"><div class="atk-cells"><div class="atk-cell"></div><div class="atk-cell"><input type="text" placeholder="E-mail"></div></div><div class="atk-cells"><div class="atk-cell"></div><div class="atk-cell"><span class="atk-input-icon"><input type="password" placeholder="Password"><a href="javascript:void(0)" class="icon-help-circled-1"></a></span></div></div></div><div class="atk-cells atk-cells-gutter"><div class="atk-cell"><div class="atk-input-radio"><span class="atk-text-dimmed"><input id="remember" type="checkbox"><label for="remember">Remember me</label></span></div></div><div class="atk-cell atk-align-right"><button class="atk-button atk-jackscrew atk-swatch-green">Sign In</button></div></div></form></div><hr><div class="atk-push-small"><a href="#" class="atk-button atk-jackscrew atk-align-center atk-swatch-facebook"><span class="icon-facebook"></span>Sign in with Facebook</a></div><a href="#" class="atk-button atk-jackscrew atk-align-center atk-swatch-twitter"><span class="icon-twitter"></span>Sign in with Twitter</a></div><div class="atk-align-center"><a href="#" class="atk-text-dimmed">Don't have an acccount?</a></div></div></div></div></div></div></div></body></html>
