--- a/playground/examples/form-login.html
+++ b/playground/examples/form-login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><!--[if lt IE 7]<html lang="en" class="no-js oldie lt-ie9 lt-ie8 lt-ie7"><![endif]-->
 <!--[if IE 7]><html lang="en" class="no-js oldie lt-ie9 lt-ie8"><![endif]-->
 <!--[if IE 8]><html lang="en" class="no-js oldie lt-ie9"><![endif]-->
-<!--[if gt IE 8]><!--><html class="no-js"><!--<![endif]--><head><meta charset="utf-8"><!--[if IE]><!--><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1"><!--[endif]--><title>Agile Toolkit CSS</title><meta name="description" content=""><link rel="stylesheet" href="../css/theme-example-login.css"></head><body><!--[if lt IE 8]><p class="browsehappy">You are using an <strong>outdated</strong> browser.
+<!--[if gt IE 8]><!--><html class="no-js"><!--<![endif]--><head><meta charset="utf-8"><!--[if IE]><!--><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1"><!--<![endif]--><title>Agile Toolkit CSS</title><meta name="description" content=""><link rel="stylesheet" href="../css/theme-example-login.css"></head><body><!--[if lt IE 8]><p class="browsehappy">You are using an <strong>outdated</strong> browser.
 Please <a href="http://browsehappy.com/">upgrade your browser</a>
 to improve your experience.</p><![endif]--><script type="text/javascript">(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
